<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OLIOA</string>
    <string name="scheme">olioa</string>
    <string name="facebook_app_id">1604900466188470</string>
    <string name="fabook_login_protocol_scheme">fb1604900466188470</string>
    <string name="server_client_id_dev">610695143021-kh9svl3nvsuh31pn6mt3elvv3tlfbmrm.apps.googleusercontent.com</string>
    <string name="server_client_id_product">610695143021-dnvgmn753ppdcmensiveq4m1vsjcpko4.apps.googleusercontent.com</string>
    <string name="success">成功</string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>
    <string name="failure">エラーが発生しました</string>
    <string name="permission_denied">アクセス拒否</string>
    <string name="network_error">インターネットは接続できませんでした。</string>
    <string name="message_read_qr_code_failure">エラーが発生されました。インターネットの接続を確認してください。</string>
    <string name="select_photo">画像選択</string>
    <string name="ef_title_folder">ライブラリ</string>
    <string name="ef_title_select_image">写真を選択する。</string>
    <string name="ef_done">選択</string>
    <string name="ucrop_label_edit_photo" tools:override="true">エリア選択</string>
    <string name="introduction_app">アプリの紹介</string>
    <string name="how_to_used_1">スマホでかんたん<font color='red'>ツナグ</font>アプリ</string>
    <string name="how_to_used_2">イウンゴは始めたその瞬間から店舗と顧客をつなげるアプリ</string>
    <string name="login_email">ログインID</string>
    <string name="login_password">パスワード</string>
    <string name="button_login">ログイン</string>
    <string name="cancel">キャンセル</string>
    <string name="reset_password"><u>パスワードが忘れた方</u></string>
    <string name="register_account">新規登録</string>
    <string name="user_login_not_null">ログインIDを入力してください。</string>
    <string name="password_login_not_null">パスワードを入力してください。</string>
    <string name="title_screen_reset_password">パスワード初期化</string>
    <string name="title_screen_change_password">プロフィール設定</string>
    <string name="title_user">ログインIDまたはメールアドレス</string>
    <string name="reset">リセット</string>
    <string name="back">キャンセル</string>
    <string name="title_new_password">新パスワード</string>
    <string name="title_confirm_new_password">新パースワード(確認)</string>
    <string name="changer_password">変更</string>
    <string name="user_id_reset_not_null"> ログインIDまたはメールアドレスを入力してください。</string>
    <string name="reset_success">登録されたメールアドレスへ認証コードを送信しました</string>
    <string name="title_changer_password">パスワード初期化</string>
    <string name="hint_code">認証コード</string>
    <string name="code_not_null">認証コードを入力してください。</string>
    <string name="code_different">認証コードは正しくありません。</string>
    <string name="new_password_by_code_not_null">パスワードを入力してください。</string>
    <string name="confirm_new_password_by_code_not_null">パスワード（確認）を入力してください。</string>
    <string name="confirm_different_new_password_by_code">パスワード（確認）はパスワードに誤りがあります。</string>
    <string name="change_password_success">パスワードを更新しました。</string>
    <string name="email_not_format">メールアドレスを正しく入力してください。</string>
    <string name="title_password_old">パスワード変更</string>
    <string name="text_hint_password_old">現在のパスワード</string>
    <string name="current_password_not_null">パスワードを入力してください。</string>
    <string name="new_password_not_null"> 新パスワードを入力してください。</string>
    <string name="confirm_new_password_not_null">新パスワード(確認)を入力してください。</string>
    <string name="confirm_different_new_password">新パスワード(確認)はパスワードに誤りがあります。</string>
    <string name="nick_name">ニックネーム</string>
    <string name="email_address">メールアドレス</string>
    <string name="avatar">画像 </string>
    <string name="change">画像 </string>
    <string name="title_register">新規登録</string>
    <string name="register">登録</string>
    <string name="user_name_not_null">名前を入力してください。</string>
    <string name="user_not_null">ログインIDを入力してください。</string>
    <string name="password_length">パスワードを8～14桁で入力してください。</string>
    <string name="password_not_null">パスワードを入力してください。</string>
    <string name="confirm_password_not_null">パスワード（確認）を入力してください。</string>
    <string name="different_password">パスワードとパスワード（確認）が異なります。正しく入力してください。</string>
    <string name="email_not_null">メールアドレスを入力していませんでした。入力してください。</string>
    <string name="email_container_chars">Email must container chars</string>
    <string name="email_validate">メールアドレスに誤りがあります。正しく入力してください。</string>
    <string name="avatar_not_null">画像を選択してください。</string>
    <string name="term_of_service">上の会員登録ボタンを押すことにより、\n利用規約に同意したことになります</string>
    <string name="link">利用規約</string>
    <string name="register_success">登録を完了しました。これからご利用できます。</string>
    <string name="input_user_name">名前</string>
    <string name="input_user_id">ログインID</string>
    <string name="input_email">メールアドレス</string>
    <string name="input_password">パスワード</string>
    <string name="input_confirm_password">パスワード(確認)</string>
    <string name="title_age">年齢</string>
    <string name="title_sex">性別</string>
    <string name="male">男性</string>
    <string name="fe_male">女性</string>
    <string name="title_home">ホーム</string>
    <string name="title_bottom_stamp">ブログ</string>
    <string name="title_bottom_another">要望</string>
    <string name="read_qr_code">QRコードリーダー</string>
    <string name="show_qr_code">QR \n コード</string>
    <string name="show_bar_code">バー\nコード</string>
    <string name="title_screen_another">要望記入</string>
    <string name="menu_notifications">Notifications</string>
    <string name="title_info_store">店の情報</string>
    <string name="title_address_store">住所 :</string>
    <string name="title_store_name">店名称 :</string>
    <string name="button_check_in">友達にする</string>
    <string name="button_cancel_check_in">キャンセル</string>
    <string name="title_service_name">サービス名称：</string>
    <string name="title_note">要望内容：</string>
    <string name="hint_note">要望内容...</string>
    <string name="msg_parse_message_failure">Parse message failure</string>
    <string name="title_screen_stamp">マイスタンプ</string>
    <string name="stamp_date">%1$s/%2$s</string>
    <string name="add_service">要望</string>
    <string name="unused_card_title">店名称：</string>
    <string name="can_use_card_title">使用可能サンタプカード</string>
    <string name="used_card_title">使用済一覧</string>
    <string name="card_amount">利用可能スタンプカード： %1$s枚</string>
    <string name="point_amount">利用可能ポイント： %1$s枚</string>
    <string name="number_push_unread">未読数：%1$s</string>
    <string name="list_store">店舗の状態確認</string>
    <string name="rating">評価する</string>
    <string name="no_item_service">サービススタンプカードがありません。</string>
    <string name="explain_stamp">ステンプの説明</string>
    <string name="qr_code">QR code</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_push_notification">通知一覧</string>
    <string name="change_password">パスワード変更</string>
    <string name="how_to_use">アプリの使い方</string>
    <string name="question_answer">よくある質問</string>
    <string name="contact_us">お問い合わせ</string>
    <string name="term_of_service_menu">利用規約</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="menu_version">バージョン</string>
    <string name="content_version">バージョン %1$s</string>
    <string name="title_screen_user_memo">要望</string>
    <string name="save_button">保存する</string>
    <string name="title_screen_manager_stamp">チェックイン中</string>
    <string name="title_screen_wait_confirm">処理中</string>
    <string name="text_waiting_1">お客様の前は</string>
    <string name="text_waiting_2">人が待っています。お客様の待ち時間はおよそ</string>
    <string name="text_waiting_3">くらいです。</string>
    <string name="title_waiting_store_confirm_checkin">処理中</string>
    <string name="waiting_store_confirm_checkin">処理中...</string>
    <string name="expand_waiting_confirm_checkin">しばらくお待ちください\n お客様番号： %1$s\nただ今お待ち人数：  %2$s人\n お呼出しまでおよそ %3$sになります</string>
    <string name="number_customer_waiting"> %1$s人</string>
    <string name="expand_waiting_confirm_prepare_finish">しばらくチェックインします\nアプリを閉じずにこのままお待ちください。</string>
    <string name="title_push_notification_list">ブログ</string>
    <string name="notification_date">%1$s</string>
    <string name="title_push_detail">ブログ内容</string>
    <string name="text_no_item">未読の通知がありません。</string>
    <string name="text_no_item_push_all">データがありません。</string>
    <string name="question_naire">アンケート</string>
    <string name="search">Search</string>
    <string name="title_screen_list_store_checked_in">お友達一覧</string>
    <string name="title_list_store_checked_in">最新ご利用のお店舗を表示</string>
    <string name="time_waiting">現在のお待ち時間</string>
    <string name="people_waiting">現在のお待ち人</string>
    <string name="number_used_service">ご利用回数</string>
    <string name="time_last_used_service">最後の利用日</string>
    <string name="content_time_waiting">  %1$s時%2$s分</string>
    <string name="content_people_waiting">  %1$s人</string>
    <string name="content_number_user_store">  %1$s回</string>
    <string name="content_time_last_used">  %1$s年%2$s月%3$s日</string>
    <string name="app_google">com.google.android.apps.maps</string>
    <string name="position_map">geo:%1$s, %2$s</string>
    <string name="position_map_address">geo:0,0?q=%1$s, %2$s(%3$s)</string>
    <string name="title_term_of_service">利用規約</string>
    <string name="content_term_of_service">WATERKURU利用規約</string>
    <string name="title_screen_how_to_use">アプリの使い方</string>
    <string name="title_screen_qa">よくある質問</string>
    <string name="title_screen_contact">お問い合わせ</string>
    <string name="title_user_name_contact">お名前</string>
    <string name="title_user_email_contact">メールアドレス</string>
    <string name="title_content_contact">お問い合わせ内容</string>
    <string name="button_contact">お問い合わせする</string>
    <string name="feedback_success">お問い合わせを送信しました。</string>
    <string name="hint_feedback">"評価内容を入力してください。</string>
    <string name="content_feedback_not_empty"> 内容を入力してください。</string>
    <string name="choose_camera">カメラ</string>
    <string name="choose_library">ライブラリ</string>
    <string name="choose_cancel">キャンセル</string>
    <string name="content_update">アプリケーションのバージョンアップがあります。アップデートしますか？</string>
    <string name="title_dialog_update">ご確認</string>
    <string name="dialog_button_ok">はい</string>
    <string name="dialog_button_late">あとでアップデートする</string>
    <string name="title_screen_store_follow">チャット</string>
    <string name="title_screen_chat">トーク</string>
    <string name="input_content_chat">メッセージを入力してください。</string>
    <string name="no_conversation">メッセージがありません。</string>
    <string name="title_screen_comment">コメント</string>
    <string name="comment">コメント</string>
    <string name="write_comment">コメントする…</string>
    <string name="no_comment">コメントがありません。</string>
    <string name="title_screen_timeline">タイムライン</string>
    <string name="number_comment">%1$s コメント</string>
    <string name="send_comment">送信</string>
    <string name="like">いいね</string>
    <string name="number_rest_image">+ %1$s</string>
    <string name="no_timeline">タイムラインがありません。</string>
    <string name="check_in_success">ともだちになりました</string>
    <string name="title_dialog_check_in">通知</string>
    <string name="title_store_push">トーク</string>
    <string name="title_group_chat">コミュニティ</string>
    <string name="scan_string">友達追加</string>
    <string name="block_chat">ブロック管理</string>
    <string name="image_transaction_name">image_transaction</string>
</resources>