<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUserName"
                style="@style/EditTextTheme"
                android:hint="@string/nick_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                style="@style/EditTextTheme"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.2"
                        android:text="@string/avatar" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8">

                        <ImageView
                            android:id="@+id/ivAvatar"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/border_image_choose"
                            android:src="@drawable/ic_add_image" />
                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.2"
                        android:text="@string/title_sex" />

                    <RadioGroup
                        android:id="@+id/radioGroupSex"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radioFeMale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fe_male" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/buttonChangeAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                android:text="アカウント登録"
                android:textColor="@color/color_text_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="@color/blumine" />

                <LinearLayout
                    android:id="@+id/layoutChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">


                    <EditText
                        android:id="@+id/inputCurrentPassword"
                        style="@style/ViewBorderTheme"
                        android:hint="@string/text_hint_password_old"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/inputNewPassword"
                        style="@style/ViewBorderTheme"
                        android:hint="@string/title_new_password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/inputConfirmPassword"
                        style="@style/ViewBorderTheme"
                        android:hint="@string/title_confirm_new_password"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/buttonChangePassword"
                style="@style/ViewBorderTheme"
                android:background="@drawable/bg_red_button"
                android:gravity="center"
                android:text="@string/changer_password"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/buttonLogin"
                style="@style/ViewBorderTheme"
                android:background="@drawable/bg_red_button"
                android:gravity="center"
                android:text="ログイン"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
