<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/logo_app"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_edit_text"
            style="@style/ViewBorderTheme"
            android:hint="@string/login_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            style="@style/ViewBorderTheme"
            android:hint="@string/login_password"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tvLogin"
            style="@style/ViewBorderTheme"
            android:background="@drawable/bg_red_button"
            android:gravity="center"
            android:text="@string/button_login"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/reset_password"
            android:textColor="@color/colorText"
            android:visibility="gone"/>
    </LinearLayout>

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
