<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/title_user_name_contact"/>

        <EditText
            android:id="@+id/user_name"
            style="@style/ViewBorderTheme"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/title_user_email_contact"/>

        <EditText
            android:id="@+id/email_user"
            style="@style/ViewBorderTheme"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/title_content_contact"/>

        <EditText
            android:id="@+id/inputContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_edit_text"
            android:gravity="top"
            android:minLines="10"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/button_contact"
            style="@style/ViewBorderTheme"
            android:background="@drawable/bg_red_button"
            android:gravity="center"
            android:text="@string/button_contact"
            android:textColor="@color/white"/>
    </LinearLayout>


</ScrollView>
