<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvReadQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_button_home"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:text="@string/read_qr_code"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvShowQRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_button_home"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:text="@string/show_qr_code"/>

        <TextView
            android:id="@+id/tvShowBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/border_button_home"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:text="@string/show_bar_code"/>
    </LinearLayout>
</LinearLayout>
